duration works different, fixing subgenres